--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "fallToPieces",
   "version": "1.0.0",
+  "resourceFolder": "assets",
   "wollokVersion": "4.0.0",
   "author": "",
   "license": ""
